--- a/tools/md_replay/index.html
+++ b/tools/md_replay/index.html
@@ -1,13 +1,17 @@
 <html>
   <head>
     <!--Load the AJAX API-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript" src="client.js"></script>
     </script>
   </head>
   <body>
-    <input type="button" value="Next Market Data" id="btn_md" onclick="nextMdBtnListener()">
+    
+    <input type="button" value="Next Market Data" id="btn_md" onclick="onNextMd()">
     <!--Div that will hold the pie chart-->
     <div id="book_div"></div>
+    <div id="price_div"></div>
+    <div id="vol_div"></div>
   </body>
 </html>
